Bug 455270 - Line around floating panel after un-maximising a fullscreen window
Summary: Line around floating panel after un-maximising a fullscreen window
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.25.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 454126 454501 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-14 19:31 UTC by Jack Hill
Modified: 2022-09-23 22:58 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
Line next to floating panel (119.55 KB, image/png)
2022-06-14 19:31 UTC, Jack Hill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Hill 2022-06-14 19:31:28 UTC
Created attachment 149698 [details]
Line next to floating panel

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Set panel to auto-hide & floating
2. Maximise a window
3. Move mouse to show panel
4. Minimise a window
5. Move mouse to show panel

OBSERVED RESULT
There is a line at the top of where the "maximised" panel used to be

EXPECTED RESULT
There should be no line

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220613
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.2
Kernel Version: 5.18.2-1-default (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
The line goes away if I maximise a window and minimise it without showing the panel.
Comment 1 Jack Hill 2022-06-14 19:34:26 UTC
Doesn't seem to occur on X11
Comment 2 Jonas Rakebrandt 2022-06-14 19:49:19 UTC
I have the same issue but with "Always Visible" instead of "Auto Hide". It seems like the line is a shadow that is being created when the panel has "grown" because of a maximized window and it doesn't get removed again after the panel shrinks.

SOFTWARE/OS VERSIONS
Operating System: Gentoo Linux 2.8
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.18.3-xanmod1-x86_64 (64-bit)
Graphics Platform: Wayland
Comment 3 Nate Graham 2022-06-15 17:57:44 UTC
Can confirm. Not sure if this is the same issue as Bug 438644 though.
Comment 4 Niccolò Venerandi 2022-06-15 18:08:05 UTC
Can confirm too, it was listed as known in the MR. Unrelated to 438644
Comment 5 r0ckhopper 2022-06-19 05:43:35 UTC
Same issue here on Wayland.

Operating System: EndeavourOS
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.18.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 6 twoexem 2022-07-25 16:57:10 UTC
I have the same issue.

Operating System: Arch Linux
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.13-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6600 XT
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C56
System Version: 1.0
Comment 7 Akseli Lahtinen 2022-08-23 11:52:56 UTC
I have the same issue, seems to only appear on Wayland. Compositor draws shadows around the panel that the floating panel morphs into when any window is maximized, instead around the floating panel itself.

Operating System: Fedora Linux 36
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.18.18-200.fc36.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD DIMGREY_CAVEFISH
Comment 8 Nate Graham 2022-09-02 14:13:13 UTC
*** Bug 454126 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2022-09-02 14:15:34 UTC
*** Bug 454501 has been marked as a duplicate of this bug. ***
Comment 10 veggero 2022-09-19 17:38:55 UTC
(In reply to Akseli Lahtinen from comment #7)
> I have the same issue, seems to only appear on Wayland. Compositor draws
> shadows around the panel that the floating panel morphs into when any window
> is maximized, instead around the floating panel itself.
> 
> Operating System: Fedora Linux 36
> KDE Plasma Version: 5.25.4
> KDE Frameworks Version: 5.97.0
> Qt Version: 5.15.5
> Kernel Version: 5.18.18-200.fc36.x86_64 (64-bit)
> Graphics Platform: Wayland
> Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
> Memory: 15,5 GiB of RAM
> Graphics Processor: AMD DIMGREY_CAVEFISH

To be clear, it's not that it is drawn in the wrong spot; it's that the shadown shouldn't be drawn at all when a panel is floating!
Comment 11 Bug Janitor Service 2022-09-20 06:51:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2978
Comment 12 Bug Janitor Service 2022-09-20 09:24:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwayland-integration/-/merge_requests/28
Comment 13 Vlad Zahorodnii 2022-09-20 10:33:23 UTC
Git commit 12a279197135f53f41896135e13bc7ddc31686ed by Vlad Zahorodnii.
Committed on 20/09/2022 at 10:29.
Pushed by vladz into branch 'master'.

Fix shadow removal

We need to call org_kde_kwin_shadow_manager.unset to ensure that the
surface state is properly updated.

M  +13   -0    src/windowsystem/windowshadow.cpp

https://invent.kde.org/plasma/kwayland-integration/commit/12a279197135f53f41896135e13bc7ddc31686ed
Comment 14 Vlad Zahorodnii 2022-09-20 10:33:57 UTC
Git commit c1ef20bc08c39bea752b68aeb9d724754875bc83 by Vlad Zahorodnii.
Committed on 20/09/2022 at 10:33.
Pushed by vladz into branch 'Plasma/5.26'.

Fix shadow removal

We need to call org_kde_kwin_shadow_manager.unset to ensure that the
surface state is properly updated.


(cherry picked from commit 12a279197135f53f41896135e13bc7ddc31686ed)

M  +13   -0    src/windowsystem/windowshadow.cpp

https://invent.kde.org/plasma/kwayland-integration/commit/c1ef20bc08c39bea752b68aeb9d724754875bc83