wayland: Fix shadow removal

If a shadow is removed using its destructor request (the manager's
unset request is unused now), the SurfaceInterface won't emit a signal
to indicate that the shadow has changed because
SurfaceInterfacePrivate::setShadow() has not been called.

Since kwin doesn't react to shadow removal in some cases, the floating
panel can have leftover drop shadow after unmaximizing a window.

BUG: 455270